Fixed flex table on mobile
Updated a media query to change the font size of a section of the table on certain mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,10 @@ footer a {
   .table-content, .section-head, .software, .web, .other {
     font-size: 1em !important;
   }
+
+  .long-words {
+    font-size: 0.8em !important;
+  }
 }
 
 .social {
